--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.17.0",
+    "bluebird": "^3.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "lodash": "^4.17.4",
     "material-ui": "next",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "moment": "^2.19.1",
     "npm": "^5.5.1",
     "path": "^0.12.7",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-event-timeline": "^1.4.0",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-trello": "^1.24.1",
+    "recharts": "^1.0.0-beta.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
